--- a/SkEditorPlus/Windows/FontSelector.xaml
+++ b/SkEditorPlus/Windows/FontSelector.xaml
@@ -13,17 +13,17 @@
         </Style>
     </Window.Resources>
     <Grid>
-        <TextBox x:Name="textFont" TextWrapping="Wrap" Text="" Margin="10,33,0,0" Height="23" TextAlignment="Left" VerticalAlignment="Top" HorizontalAlignment="Left" Width="170" TextChanged="textFont_TextChanged"/>
+        <TextBox x:Name="textFont" TextWrapping="Wrap" Text="" Margin="10,33,0,0" Height="23" TextAlignment="Left" VerticalAlignment="Top" HorizontalAlignment="Left" Width="170" TextChanged="OnFontTextChanged"/>
 
 
-        <ListBox x:Name="lboxFont" HorizontalAlignment="Left" Height="165" VerticalAlignment="Top" Width="170" Margin="10,75,0,0" SelectionChanged="lboxFont_SelectionChanged">
+        <ListBox x:Name="lboxFont" HorizontalAlignment="Left" Height="165" VerticalAlignment="Top" Width="170" Margin="10,75,0,0" SelectionChanged="OnFontChange">
             <ListBox.ItemContainerStyle>
                 <Style TargetType="ListBoxItem" BasedOn="{StaticResource ListBoxItemStyle}" />
             </ListBox.ItemContainerStyle>
         </ListBox>
 
         <Button x:Name="btnOK" Content="{DynamicResource ApplyButton}" IsDefault="True" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="220,33,0,0"
-                Click="btnOK_Click"/>
+                Click="OnApply"/>
         <Button x:Name="btnCancel" Content="{DynamicResource Cancel}" IsCancel="True" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="220,75,0,0"/>
 
     </Grid>
