--- a/SkEditorPlus/Languages/PirateSpeak.xaml
+++ b/SkEditorPlus/Languages/PirateSpeak.xaml
@@ -54,6 +54,7 @@
     <system:String x:Key="BackpackWindowTitle">Backpack o' treasures</system:String>
     <system:String x:Key="SettingsWindowTitle">Settin's, arrr!</system:String>
     <system:String x:Key="FontSelectorTitle">Pick yer font, ye swashbuckler!</system:String>
+    <system:String x:Key="ItemSelectorTitle">Pick ye item</system:String>
     <system:String x:Key="MarketplaceTitle">Marketyplace</system:String>
     <!-- Labels -->
 
@@ -62,7 +63,8 @@
     <system:String x:Key="AnonymousCheckbox">I be wantin' to be anonymous</system:String>
     <system:String x:Key="PublishButton">Share me code, matey!</system:String>
     <system:String x:Key="GenerateButton">Create me code, ya scurvy dog!</system:String>
-    <system:String x:Key="ApplyButton">Apply the changes, ye landlubber</system:String>
+    <system:String x:Key="ApplyButton">Apply</system:String>
+    <system:String x:Key="PreviewButton">Spyglass</system:String>
     <system:String x:Key="PublishResultUrlPlaceholder">Here be a link to yer code, savvy?</system:String>
 
     <system:String x:Key="WhatDoYouWantToGenerate">What be ye wantin' to create?</system:String>
@@ -84,13 +86,17 @@
 
     <system:String x:Key="GUIGenFunctionName">Name o' function</system:String>
     <system:String x:Key="GUIGenTitle">Title</system:String>
-    <system:String x:Key="GUIGenRows">Rows's quantity</system:String>
-    <system:String x:Key="GUIGenExampleItem">Add example item</system:String>
-    <system:String x:Key="GUIGenBackground">Add background</system:String>
-    <system:String x:Key="GUIGenHint">To show yer GUI, use {0}</system:String>
-    <system:String x:Key="GUIGenExampleItemName">Example item</system:String>
-    <system:String x:Key="GUIGenExampleItemLore">Example lore</system:String>
-    <system:String x:Key="GUIGenExampleItemClicked">Ye clicked the example item!</system:String>
+    <system:String x:Key="GUIGenRows">Row quantity</system:String>
+    <system:String x:Key="GUIGenBackground">Background</system:String>
+    <system:String x:Key="GUIGenSelectBackground">Select</system:String>
+    <system:String x:Key="GUIGenQuickPreview">Click wit' shift t' use quick preview, me heartie!</system:String>
+    <system:String x:Key="GUIGenApplyTooltip">Arr, ye be needin' the skript-gui addon fer this 'ere generated code, matey</system:String>
+    <system:String x:Key="GUIGenEdit">Avast! Edit</system:String>
+    <system:String x:Key="GUIGenRemove">Walk the plank!</system:String>
+
+    <system:String x:Key="ItemSelectorSearch">Hunt...</system:String>
+    <system:String x:Key="ItemSelectorItemName">Booty name</system:String>
+    <system:String x:Key="ItemSelectorAddAction">Add arrr!</system:String>
 
     <system:String x:Key="QuickEditsVariablesCheckbox">Swap dots fer colons in yer variables</system:String>
     <system:String x:Key="QuickEditsSpacesCheckbox">Swap spaces fer tabs, arrrr!</system:String>
@@ -156,7 +162,7 @@
     <system:String x:Key="CloseConfirmation">Yer file be not saved. Be ye sure ye want to close it?</system:String>
     <system:String x:Key="Attention">Attention, me hearties!</system:String>
     <system:String x:Key="Yeah">Aye</system:String>
-    <system:String x:Key="Cancel">Avast ye, cancel</system:String>
+    <system:String x:Key="Cancel">Cancel</system:String>
     <system:String x:Key="Continue">Carry on, ye lubbers</system:String>
 
     <system:String x:Key="SyntaxError">Avast ye! We couldn't load the map to the buried treasure.{n}{0}! Ye be walkin' the plank, ye bilge rat!</system:String>
@@ -175,7 +181,6 @@
     <system:String x:Key="GUIGenNameError">Ye needs to name yer GUI, matey!</system:String>
     <system:String x:Key="GUIGenTitleError">Ye needs to give yer GUI a title, me hearties!</system:String>
     <system:String x:Key="GUIGenRowsError">Ye can only have between 1 and 6 rows on yer GUI, ye scurvy dog!</system:String>
-    <system:String x:Key="GUIGenRowsError2">Yer number of rows needs to be a number, ye landlubber!</system:String>
 
     <system:String x:Key="CmdGenNameError">Ye needs to name yer command, me bucko!</system:String>
     <system:String x:Key="CmdGenCooldownError">Yer cooldown needs to be a number, ye bilge rat!</system:String>
